--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   text-transform: uppercase;
   line-height: 0.76em;
   position: absolute;
-  color: #fff;
+  color: #FFF4EA;
   font-size: 3.5em;
   white-space: nowrap;
   font-weight: bold;
@@ -57,11 +57,11 @@ body {
 }
 
 .container .box span i:nth-child(1) {
-  color: #5c5fc4;
+  color: #FF8A8A;
 }
 
 .container .box span i:nth-child(2) {
-  color: #e20ec9;
+  color: #F0A8D0;
 }
 
 @keyframes animate {
